--- a/Emma/DCW_Mistma/alarms.html
+++ b/Emma/DCW_Mistma/alarms.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="dailyMaintenance">
+      <h2 class="header">Alarmer</h2>
+      <nav class="mainMenu">
+        <a class="mainMenu__icons" href="index.html"
+          ><img src="images/home.svg" alt="home icon"
+        /></a>
+        <a class="mainMenu__icons mainMenu__icons--active" href="alarms.html"
+          ><img src="images/alarm.svg" alt="alarm icon"
+        /></a>
+        <a class="mainMenu__icons" href="service.html"
+          ><img src="images/service.svg" alt="service icon"
+        /></a>
+        <a class="mainMenu__icons" href="settings.html"
+          ><img src="images/settings.svg" alt="settings icon"
+        /></a>
+      </nav>
+    </section>
+  </body>
 </html>
