--- a/Emma/DCW_Mistma/index.html
+++ b/Emma/DCW_Mistma/index.html
@@ -6,5 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="dailyMaintenance">
+      <h2 class="header">Daglig drift</h2>
+      <nav class="mainMenu">
+        <a class="mainMenu__icons mainMenu__icons--active" href="index.html"
+          ><img src="images/home.svg" alt="home icon"
+        /></a>
+        <a class="mainMenu__icons" href="alarms.html"
+          ><img src="images/alarm.svg" alt="alarm icon"
+        /></a>
+        <a class="mainMenu__icons" href="service.html"
+          ><img src="images/service.svg" alt="service icon"
+        /></a>
+        <a class="mainMenu__icons" href="settings.html"
+          ><img src="images/settings.svg" alt="settings icon"
+        /></a>
+      </nav>
+    </section>
+  </body>
 </html>
