--- a/Kristian/DCW-MediaMasters/index.html
+++ b/Kristian/DCW-MediaMasters/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title> 
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <link rel="stylesheet" href="style.css" />
   <body>
   
       <section class="Header">
-        <header>
         <section class="Icons">
-          <img class="Icons" src="images/ArrowLeft.png" alt="Back" width="25px" />
-          <img class="Icons" src="images/GearIcon.png" alt="Gear" width="25px" />
-          <img class="IconTilstand" src="images/Tilstand.png" alt="TilstandKnap" width="70px">
+          <img class="Icons" src="images/ArrowLeft.png" alt="Back" width="30px" />
+          <img class="Icons" src="images/GearIcon.png" alt="Gear" width="30px" />
+ 
         </section>
+        <img class="IconTilstand" src="images/Tilstand.png" alt="TilstandKnap" height="30px">
         
       </section>
     </header>
