--- a/Camilla/DCW/service.html
+++ b/Camilla/DCW/service.html
@@ -8,28 +8,20 @@
   </head>
   <body>
     <section class="mainPage">
-      <h2 class="header">Daglig drift</h2>
+      <h2 class="header">Service</h2>
       <nav class="mainMenu">
-        <a class="mainMenu__icons mainMenu__icons--active" href="index.html"
+        <a class="mainMenu__icons" href="index.html"
           ><img src="images/home.svg" alt="home icon"
         /></a>
         <a class="mainMenu__icons" href="alarms.html"
           ><img src="images/alarm.svg" alt="alarm icon"
         /></a>
-        <a class="mainMenu__icons" href="serviceLogin.html"
+        <a class="mainMenu__icons mainMenu__icons--active" href="serviceLogin.html"
           ><img src="images/service.svg" alt="service icon"
         /></a>
         <a class="mainMenu__icons" href="settings.html"
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
-      <div
-        class="progressBar"
-        aria-valuenow="40"
-        aria-valuemin="0"
-        aria-valuemax="100"
-        style="--value: 40"
-      ></div>
-    </section>
   </body>
 </html>
