--- a/Michaela/dcw_redesign/index.html
+++ b/Michaela/dcw_redesign/index.html
@@ -6,6 +6,7 @@
     <title>Danish Clean Water</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="startScreen.html">
 </head>
 <body class="pauseScreen body">
     <h1 class="systemStatus">
@@ -16,5 +17,6 @@
             Proces i gang
         </h2>
     </section>
+    <a class="fullscreen-link" href="startscreen.html"></a>
 </body>
 </html>
