--- a/Michaela/dcw_redesign/startScreen.html
+++ b/Michaela/dcw_redesign/startScreen.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="login.html">
 </head>
 <body class="body">
     <article class="saltStatus">
@@ -23,22 +24,25 @@
             </div> 
         </div>              
     </article>
-    <section class="button">
-        <button class="button__machine">
-                Maskine
-                <img class="button__cirkle--machine" src="images/button_cirkel.svg" alt="">
-        </button>
-        <button class="button__pump">
-                Pumpe
-                <img class="button__cirkle--pump" src="images/button_cirkel.svg" alt="">
-        </button>
-    </section>
+    <label class="switch">
+        <input type="checkbox" checked>
+        <span onclick="myFunction" class="slider round">Maskine</span>
+      </label>
+      <label class="switch">
+        <input type="checkbox" checked>
+        <span class="slider round">Pumpe</span>
+      </label>
     <nav class="navbar">
-        <div class="navbar__whiteBox">
-        <a href="startScreen.html" class="navbar__startScreen"><span class="material-symbols-outlined">home</span></a>
-        </div>
-        <a href="" class="navbar__settings"><span class="material-symbols-outlined">settings</span></a>
-        <a href="" class="navbar__login"><span class="material-symbols-outlined">vpn_key</span></a>
+        <a href="startScreen.html" class="navbar__icon navbar__icons--active">
+            <img src="house.svg" alt="Home Icon">
+        </a>
+        <a href="" class="navbar__icon">
+            <img src="settings.svg" alt="Settings Icon">
+        </a>
+        <a href="login.html" class="navbar__icon">
+            <img src="key.svg" alt="VPN Key Icon">
+        </a>
     </nav>
+    
 </body>
 </html>
