--- a/Emma/DCW_Mistma/settings.html
+++ b/Emma/DCW_Mistma/settings.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="dailyMaintenance">
+    <section class="MainPage">
       <h2 class="header">Indstillinger</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
@@ -23,6 +23,22 @@
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
+      <article class="settings">
+        <a class="settingsInfo" href="contact.html"
+          ><img
+            class="settingsContact__image"
+            src="images/contact.svg"
+            alt="contact icon"
+          />Kontakt oplysninger</a
+        >
+        <a class="settingsInfo" href="language.html"
+          ><img
+            class="settingsContact__imageFlag"
+            src="images/Denmark.svg"
+            alt="flag"
+          />Sprog</a
+        >
+      </article>
     </section>
   </body>
 </html>
