--- a/Emma/DCW_Mistma/alarms.html
+++ b/Emma/DCW_Mistma/alarms.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="dailyMaintenance">
+    <section class="MainPage">
       <h2 class="header">Alarmer</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
@@ -16,13 +16,43 @@
         <a class="mainMenu__icons mainMenu__icons--active" href="alarms.html"
           ><img src="images/alarm.svg" alt="alarm icon"
         /></a>
-        <a class="mainMenu__icons" href="service.html"
+        <a class="mainMenu__icons" href="serviceLogin.html"
           ><img src="images/service.svg" alt="service icon"
         /></a>
         <a class="mainMenu__icons" href="settings.html"
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
+      <section class="alarmHistory">
+        <h3 class="alarmHistory__header">Alarm historik:</h3>
+        <article class="alarmHistory__warnings">
+          <img
+            class="alarmHistory__images"
+            src="images/Error.svg"
+            alt="fejl icon"
+          />
+          <p class="alarmHistory__titel">Ingen blødgøring valgt</p>
+          <p class="alarmHistory__date">24/10/2023</p>
+        </article>
+        <article class="alarmHistory__warnings">
+          <img
+            class="alarmHistory__images"
+            src="images/warning.svg"
+            alt="fejl icon"
+          />
+          <p class="alarmHistory__titel">Lav salt</p>
+          <p class="alarmHistory__date">11/10/2023</p>
+        </article>
+        <article class="alarmHistory__warnings">
+          <img
+            class="alarmHistory__images"
+            src="images/Error.svg"
+            alt="fejl icon"
+          />
+          <p class="alarmHistory__titel">Ingen blødgøring valgt</p>
+          <p class="alarmHistory__date">23/09/2023</p>
+        </article>
+      </section>
     </section>
   </body>
 </html>
