--- a/Emma/DCW_Mistma/service.html
+++ b/Emma/DCW_Mistma/service.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="dailyMaintenance">
+    <section class="MainPage">
       <h2 class="header">Service login</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
@@ -16,7 +16,9 @@
         <a class="mainMenu__icons" href="alarms.html"
           ><img src="images/alarm.svg" alt="alarm icon"
         /></a>
-        <a class="mainMenu__icons mainMenu__icons--active" href="service.html"
+        <a
+          class="mainMenu__icons mainMenu__icons--active"
+          href="serviceLogin.html"
           ><img src="images/service.svg" alt="service icon"
         /></a>
         <a class="mainMenu__icons" href="settings.html"
