--- a/Camilla/DCW/service.html
+++ b/Camilla/DCW/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DCW interface</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,5 +23,19 @@
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
+      <section class="toggleSwitch">
+        <p class="toggleSwitchTitle">Pumpe</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </section>
+      <section class="toggleSwitch">
+        <p class="toggleSwitchTitle">System</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </section>
   </body>
 </html>
