--- a/Camilla/DCW/settings.html
+++ b/Camilla/DCW/settings.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="mainPage">
+    <section class="mainPage--maintenance">
       <h2 class="header">Daglig drift</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
