--- a/Camilla/DCW/index.html
+++ b/Camilla/DCW/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DCW interface</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="mainPage">
+    <section class="mainPage--maintenance">
       <h2 class="header">Daglig drift</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons mainMenu__icons--active" href="index.html"
@@ -23,13 +23,30 @@
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
-      <div
-        class="progressBar"
-        aria-valuenow="40"
-        aria-valuemin="0"
-        aria-valuemax="100"
-        style="--value: 40"
-      ></div>
+      <section class="progressBarSection">
+        <div
+          class="progressBar"
+          aria-valuenow="40"
+          aria-valuemin="0"
+          aria-valuemax="100"
+          style="--value: 40"
+        ></div>
+        <p class="saltdosering">Salt dosering</p>
+      </section>
+      <section class="toggleSwitch">
+        <p class="toggleSwitchTitle">Pumpe</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </section>
+      <section class="toggleSwitch">
+        <p class="toggleSwitchTitle">System</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </section>
     </section>
   </body>
 </html>
