--- a/Michaela/dcw_redesign/login.html
+++ b/Michaela/dcw_redesign/login.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
-<body>
-    <div id="container">
-        <div id="code-input">
-            <input type="text" placeholder="*******" disabled>
+<body class="body">
+    <div class="code__container">
+        <div class="code-input">
+            <input type="text" placeholder="            • • • • • • •" disabled>
         </div>
     <table>
         <tr>
@@ -35,9 +35,9 @@
         </tr>
         <tr>
          
-            <td><div class="circle">clear</div></td>
+            <td><img src="back.svg" alt="Clear" class="numpad__icon"></td>
             <td><div class="circle">0</div></td>
-            <td colspan="3"><div class="circle" id="clear">enter</div></td>
+            <td colspan="3"><img src="enter.svg" alt="Enter" class="numpad__icon"></td>
         </tr>
         
     </table>
