--- a/Michaela/dcw_redesign/login.html
+++ b/Michaela/dcw_redesign/login.html
@@ -5,43 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="startScreen.html">
-    <link rel="stylesheet" href="index.html">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="body">
     <div class="code__container">
         <div class="code-input">
             <input type="text" placeholder="            • • • • • • •" disabled>
         </div>
-    <table>
-        <tr>
-            <td><div class="circle">1</div></td>
-            <td><div class="circle">2</div></td>
-            <td><div class="circle">3</div></td>
-        </tr>
-        <tr>
-            <td><div class="circle">4</div></td>
-            <td><div class="circle">5</div></td>
-            <td><div class="circle">6</div></td>
-        </tr>
-        <tr>
-            <td><div class="circle">7</div></td>
-            <td><div class="circle">8</div></td>
-            <td><div class="circle">9</div></td>
-        </tr>
-        <tr>
-         
-            <td><img src="images/back.svg" alt="Clear" class="numpad__icon"></td>
-            <td><div class="circle">0</div></td>
-            <td colspan="3"><img src="images/enter.svg" alt="Enter" class="numpad__icon"></td>
-        </tr>
-       
-    </table>
-   
+        <table>
+            <tr>
+                <td><div class="circle">1</div></td>
+                <td><div class="circle">2</div></td>
+                <td><div class="circle">3</div></td>
+            </tr>
+            <tr>
+                <td><div class="circle">4</div></td>
+                <td><div class="circle">5</div></td>
+                <td><div class="circle">6</div></td>
+            </tr>
+            <tr>
+                <td><div class="circle">7</div></td>
+                <td><div class="circle">8</div></td>
+                <td><div class="circle">9</div></td>
+            </tr>
+            <tr>
+                <td><img src="images/back.svg" alt="Clear" class="numpad__icon"></td>
+                <td><div class="circle">0</div></td>
+                <td><img src="images/enter.svg" alt="Enter" class="numpad__icon"></td>
+            </tr>
+        </table>
+    </div>
+ 
     <nav class="navbar">
         <a href="startScreen.html" class="navbar__icon">
             <img src="images/house.svg" alt="Home Icon">
@@ -53,6 +47,5 @@
             <img src="images/key.svg" alt="VPN Key Icon">
         </a>
     </nav>
- 
 </body>
 </html>
