--- a/Camilla/DCW/ok.html
+++ b/Camilla/DCW/ok.html
@@ -10,7 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
   </head>
-  <body class="standbyScreen__ok">
-    <img class="standbyScreen__icon" src="images/check.svg" alt="check icon" />
+  <body>
+    <section class="standbyScreen__ok standby">
+      <img
+        class="standbyScreen__icon"
+        src="images/check.svg"
+        alt="check icon"
+      />
+    </section>
   </body>
 </html>
