--- a/Camilla/DCW/warning.html
+++ b/Camilla/DCW/warning.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="standbyScreen__warning">
+    <section class="standbyScreen__warning standby">
       <a class="standbyScreen__closeIcon" href="index.html"
         ><img src="images/x.svg" alt="close icon"
       /></a>
