--- a/Camilla/DCW/index.html
+++ b/Camilla/DCW/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <section class="mainPage--maintenance">
+      <section class="standbyScreen__error standby">
+        <a class="standbyScreen__closeIcon" href="index.html"
+          ><img src="images/x.svg" alt="close icon"
+        /></a>
+        <img
+          class="standbyScreen__errorIcon"
+          src="images/error.svg"
+          alt="error icon"
+        />
+        <h2 class="standbyScreen__errorMessage">INGEN BLØDGØRING VALGT</h2>
+        <a class="standbyScreen__resetAlarm" href="alarms.html">Reset Alarm</a>
+      </section>
       <h2 class="header">Daglig drift</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons mainMenu__icons--active" href="index.html"
@@ -48,5 +60,20 @@
         </label>
       </section>
     </section>
+    <script>
+      const standbyElement = document.querySelector(".standby");
+      standbyElement.addEventListener("click", () => {
+        doTheTimeout();
+        standbyElement.classList.toggle("standby--active");
+      });
+      function doTheTimeout() {
+        // standbyElement.classList.toggle('standby--active');
+        setTimeout(() => {
+          standbyElement.classList.toggle("standby--active");
+        }, 10000);
+      }
+
+      doTheTimeout();
+    </script>
   </body>
 </html>
