--- a/Camilla/DCW/settings.html
+++ b/Camilla/DCW/settings.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <section class="mainPage--maintenance">
+      <section class="standbyScreen__error standby">
+        <a class="standbyScreen__closeIcon" href="index.html"
+          ><img src="images/x.svg" alt="close icon"
+        /></a>
+        <img
+          class="standbyScreen__errorIcon"
+          src="images/error.svg"
+          alt="error icon"
+        />
+        <h2 class="standbyScreen__errorMessage">INGEN BLØDGØRING VALGT</h2>
+        <a class="standbyScreen__resetAlarm" href="alarms.html">Reset Alarm</a>
+      </section>
       <h2 class="header">Daglig drift</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
@@ -23,5 +35,37 @@
           ><img src="images/settings.svg" alt="settings icon"
         /></a>
       </nav>
+      <article class="settings">
+        <a class="settingsInfo" href="contact.html"
+          ><img
+            class="settingsContact__image"
+            src="images/contact.svg"
+            alt="contact icon"
+          />Kontakt oplysninger</a
+        >
+        <a class="settingsInfo" href="language.html"
+          ><img
+            class="settingsContact__imageFlag"
+            src="images/Denmark.svg"
+            alt="flag"
+          />Sprog</a
+        >
+      </article>
+    </section>
+    <script>
+      const standbyElement = document.querySelector(".standby");
+      standbyElement.addEventListener("click", () => {
+        doTheTimeout();
+        standbyElement.classList.toggle("standby--active");
+      });
+      function doTheTimeout() {
+        // standbyElement.classList.toggle('standby--active');
+        setTimeout(() => {
+          standbyElement.classList.toggle("standby--active");
+        }, 10000);
+      }
+
+      doTheTimeout();
+    </script>
   </body>
 </html>
