--- a/Camilla/DCW/service.html
+++ b/Camilla/DCW/service.html
@@ -16,7 +16,9 @@
         <a class="mainMenu__icons" href="alarms.html"
           ><img src="images/alarm.svg" alt="alarm icon"
         /></a>
-        <a class="mainMenu__icons mainMenu__icons--active" href="serviceLogin.html"
+        <a
+          class="mainMenu__icons mainMenu__icons--active"
+          href="serviceLogin.html"
           ><img src="images/service.svg" alt="service icon"
         /></a>
         <a class="mainMenu__icons" href="settings.html"
@@ -37,5 +39,6 @@
           <span class="slider round"></span>
         </label>
       </section>
+    </section>
   </body>
 </html>
