--- a/Camilla/DCW/settings.html
+++ b/Camilla/DCW/settings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DCW interface</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -38,7 +38,7 @@
       <article class="settings">
         <a class="settingsInfo" href="contact.html"
           ><img
-            class="settingsContact__image"
+            class="settingsContact__image settingsContact__image--phone"
             src="images/contact.svg"
             alt="contact icon"
           />Kontakt oplysninger</a
