quick change to numberpad
forgot to put the svg file for enter in

--- a/Anders/STA-media/danish_clean_water/Service.html
+++ b/Anders/STA-media/danish_clean_water/Service.html
@@ -50,7 +50,7 @@
         <button class="numberpad__number">7</button>
         <button class="numberpad__number">8</button>
         <button class="numberpad__enter">
-          <img src="image/enter.svg" alt="" />
+          <img src="dcw__img/enter.svg" alt="" />
         </button>
         <button class="numberpad__number">9</button>
         <button class="numberpad__delete">Del</button>
