--- a/Camilla/DCW/contact.html
+++ b/Camilla/DCW/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="MainPage">
+    <section class="MainPage mainPage--maintenance">
       <h2 class="header">Kontakt oplysninger</h2>
       <nav class="mainMenu">
         <a class="mainMenu__icons" href="index.html"
