--- a/Michaela/dcw_redesign/login.html
+++ b/Michaela/dcw_redesign/login.html
@@ -8,34 +8,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body class="body">
-    <div class="code__container">
-        <div class="code-input">
+    <section class="code__container">
+        <section class="code-input">
             <input type="text" placeholder="            • • • • • • •" disabled>
-        </div>
+        </section>
         <table>
             <tr>
-                <td><div class="circle">1</div></td>
-                <td><div class="circle">2</div></td>
-                <td><div class="circle">3</div></td>
+                <td><section class="circle">1</section></td>
+                <td><section class="circle">2</section></td>
+                <td><section class="circle">3</section></td>
             </tr>
             <tr>
-                <td><div class="circle">4</div></td>
-                <td><div class="circle">5</div></td>
-                <td><div class="circle">6</div></td>
+                <td><section class="circle">4</section></td>
+                <td><section class="circle">5</section></td>
+                <td><section class="circle">6</section></td>
             </tr>
             <tr>
-                <td><div class="circle">7</div></td>
-                <td><div class="circle">8</div></td>
-                <td><div class="circle">9</div></td>
+                <td><section class="circle">7</section></td>
+                <td><section class="circle">8</section></td>
+                <td><section class="circle">9</section></td>
             </tr>
             <tr>
                 <td><img src="images/back.svg" alt="Clear" class="numpad__icon"></td>
-                <td><div class="circle">0</div></td>
+                <td><section class="circle">0</section></td>
                 <td><img src="images/enter.svg" alt="Enter" class="numpad__icon"></td>
             </tr>
         </table>
-    </div>
- 
+    </section>
     <nav class="navbar">
         <a href="startScreen.html" class="navbar__icon">
             <img src="images/house.svg" alt="Home Icon">
