--- a/Louise/bloggen/camilla github/index.html
+++ b/Louise/bloggen/camilla github/index.html
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <section class="hero">
-      <img class="hero__image" src="images/Sønderborg.jpg" alt="sønderborg" />
+      <video class="hero__image" src="images/abovesonderborg.mp4" autoplay loop></video>
 
       <img
         class="hero__image--small"
