--- a/Louise/mountainanimaiton/mountains-animation/index.html
+++ b/Louise/mountainanimaiton/mountains-animation/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background animation</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <script src="https://kit.fontawesome.com/3b161c540c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
         <h1 class="header__title">Explore the <span class="header__title--highlight">mountains</span></h1>
     </header>
-    <main class="articles">
+    <main class="articles animate__animated animate__fadeInUp ">
         <article class="article">
             <h2 class="article__heading">Hiking in the mountains</h2>
             <img class="article__image" src="images/hiking.jpeg" alt="man som vandrer i bjergene">
@@ -44,6 +49,7 @@
             <a class="article__button" href="#">How to breath the air</a>
         </article>
     </main>
+        
 </body>
 
 </html>
